--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "581d13fd-a9b3-468b-9a8c-064f09f05103",
    "metadata": {},
    "outputs": [],
@@ -20,14 +20,14 @@
    "outputs": [],
    "source": [
     "def hello_world():\n",
-    "    for idx in range(0,10):\n",
-    "        print(\"Hello World\")\n",
+    "    for idx in range(0,2):\n",
+    "        print(\"Hola mundo!\")\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9490781f-65c3-4ba6-a4d3-bb44f56781d3",
    "metadata": {},
    "outputs": [
@@ -35,16 +35,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n",
-      "Hello World\n"
+      "Hola mundo!\n",
+      "Hola mundo!\n"
      ]
     }
    ],
